// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <ImgCard /> should render correctly 1`] = `
<figure
  className="imageCard"
>
  <img
    alt={undefined}
    className="imageCard__img"
    role="presentation"
    src="img.png"
  />
</figure>
`;

exports[`component <ImgCard /> should render with alt text 1`] = `
<figure
  className="imageCard"
>
  <img
    alt="image description"
    className="imageCard__img"
    role={false}
    src="img.png"
  />
  <figcaption
    className="imageCard__caption"
  >
    image description
  </figcaption>
</figure>
`;

exports[`component <ImgCard /> should render with alt text 2`] = `
<figure
  className="imageCard"
>
  <img
    alt="image description"
    className="imageCard__img"
    role={false}
    src="img.png"
  />
  <figcaption
    className="imageCard__caption"
  >
    caption text
  </figcaption>
</figure>
`;
